--- a/Archiv/Informatik/index.html
+++ b/Archiv/Informatik/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../../assets/2LayerDeepInsertChapterHTML.js"></script>
     <!-- <script defer src="../feedbackPopup.js"></script> -->
-    <script async src="../Themes JavaScript/themeChapter.js"></script>
+    <script async src="../../Themes JavaScript/2LayerDeepTheme.js"></script>
     <title>Exercicer</title>
   </head>
   <body>
@@ -18,28 +18,31 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Archiv</h1>
-      <h2>Exercicer</h2>
+      <h2 class="uppercase">Exercicer</h2>
       <hr />
+      <h2>Programmation en Java</h2>
       <ol>
         <li>
-          <a class="indexLink" href="Chimie/index.html">Chemie</a>
+          <p><u>La classe Timer</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Classe Timer/Chronometre.pdf">Chronomètre</a>
+            </li>
+            <li>
+              <a href="pdf/Classe Timer/Moving Ball.pdf">Moving Ball</a>
+            </li>
+            <li>
+              <a href="pdf/Classe Timer/Moving Balls.pdf">Moving Balls</a>
+            </li>
+          </ul>
         </li>
         <li>
-          <a class="indexLink" href="Elektrotechnik/index.html"
-            >Elektrotechnik</a
-          >
-        </li>
-        <li>
-          <a class="indexLink" href="Mathe/index.html">Mathé</a>
-        </li>
-        <li>
-          <a class="indexLink" href="Mechanik/index.html">Mechanik</a>
-        </li>
-        <li>
-          <a class="indexLink" href="Physik/index.html">Physik</a>
-        </li>
-        <li>
-          <a class="indexLink" href="Informatik/index.html">Informatik</a>
+          <p><u>Héritage</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Heritage/Emojis.pdf">Emojis</a>
+            </li>
+          </ul>
         </li>
       </ol>
     </div>
