--- a/Archiv/Mechanik/index.html
+++ b/Archiv/Mechanik/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../../assets/2LayerDeepInsertChapterHTML.js"></script>
     <!-- <script defer src="../feedbackPopup.js"></script> -->
-    <script async src="../Themes JavaScript/themeChapter.js"></script>
+    <script async src="../../Themes JavaScript/2LayerDeepTheme.js"></script>
     <title>Exercicer</title>
   </head>
   <body>
@@ -20,26 +20,27 @@
       <h1>Archiv</h1>
       <h2>Exercicer</h2>
       <hr />
+      <h2>Mechanik</h2>
       <ol>
         <li>
-          <a class="indexLink" href="Chimie/index.html">Chemie</a>
+          <p><u>Arbeit und Leistung</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Arbeit Und Leistung/Arbeit Und Leistung.pdf"
+                >Arbeit und Leistung</a
+              >
+            </li>
+          </ul>
         </li>
         <li>
-          <a class="indexLink" href="Elektrotechnik/index.html"
-            >Elektrotechnik</a
-          >
-        </li>
-        <li>
-          <a class="indexLink" href="Mathe/index.html">Mathé</a>
-        </li>
-        <li>
-          <a class="indexLink" href="Mechanik/index.html">Mechanik</a>
-        </li>
-        <li>
-          <a class="indexLink" href="Physik/index.html">Physik</a>
-        </li>
-        <li>
-          <a class="indexLink" href="Informatik/index.html">Informatik</a>
+          <p><u>Festigkeitslehre</u></p>
+          <ul>
+            <li>
+              <a href="pdf/Festigkeitslehre/Festigkeitslehre.pdf"
+                >Festigkeitslehre</a
+              >
+            </li>
+          </ul>
         </li>
       </ol>
     </div>
