--- a/Technologie/kreisprozesse.html
+++ b/Technologie/kreisprozesse.html
@@ -109,6 +109,13 @@
         ausschlie&beta;lich aus der aufgewandten Arbeit gespeist wird. Ein
         <q>Wärmepumpen</q> fände nicht mehr statt.
       </p>
+      <h2>Carnot'sche Kreisprozess</h2>
+      <p>
+        Der Carnot'sche Kreisprozess stellt ein idealer Kreisprozess dar. Er
+        besteht aus 2 Isothermen sowie 2 Adiabaten, wobei die Wärmeaufnahme und
+        Wärmeabgabe bei konstanter Temperatur erfolgen.
+      </p>
+      <!-- <h2>Der Carnot'sche Wirkungsgrad</h2> -->
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
