--- a/changeLog.html
+++ b/changeLog.html
@@ -114,6 +114,48 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <h3>Update 43</h3>
+            <time>3.6.2023</time>
+            <ul>
+              <li class="changeLogText">
+                D'Archiv ass elo an eenzel Fächer opgedeelt
+              </li>
+              <li class="changeLogText">
+                Nei Exercicer: <br />
+                Darstellung und Kenngrö&beta;en von Wechselgrö&beta;en, <br />
+                Addition frequenzgleicher Wechselgrö&beta;en,<br />
+                Ohmscher Widerstand im Wechselstromkreis,<br />
+                Idealer Kondensator im Wechselstromkreis,<br />
+                Ideale Spule an Wechselspannung,<br />RL- und RC-
+                Schaltungen,<br />
+                RLC-Schaltungen,<br />
+                Produit Vectoriel, <br />
+                Produit Scalaire, <br />
+                Position relative et intersection de deux droites, <br />
+                Droites paramétriques, <br />
+              </li>
+              <li class="changeLogText">De Footer ass elo ëmmer ënnen</li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
+            <h3>Update 42</h3>
+            <time>26.5.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Treibhauseffekt
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Energieeffizienz
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Luftschadstoffe
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Technologie: Ottomotor
+              </li>
+              <li class="changeLogText">
+                Ergänzungen am Kapitel: Kernkraftwerke, Kreisprozesse
+              </li>
+            </ul>
             <h3>Update 41</h3>
             <time>21.5.2023</time>
             <ul>
