updae42com mit2

--- a/Archiv/Mathe/index.html
+++ b/Archiv/Mathe/index.html
@@ -27,7 +27,7 @@
           <ul>
             <li>
               <a href="pdf/Geometrie/Produit Vectoriel.pdf"
-                >Produit Vectorielle</a
+                >Produit Vectoriel</a
               >
             </li>
             <li>
