--- a/Archiv/Mathe/index.html
+++ b/Archiv/Mathe/index.html
@@ -20,7 +20,7 @@
       <h1>Archiv</h1>
       <h2>Exercicer</h2>
       <hr />
-        <h2>Mathématiques</h2>
+      <h2>Mathématiques</h2>
       <ol>
         <li>
           <p><u>Géométrie dans l'espace</u></p>
@@ -31,13 +31,20 @@
               >
             </li>
             <li>
-              <a href="pdf/Geometrie/Droites Parametriques.pdf">Droites Paramétriques</a>
+              <a href="pdf/Geometrie/Droites Parametriques.pdf"
+                >Droites Paramétriques</a
+              >
             </li>
             <li>
-              <a href="pdf/Geometrie/Produit Vectoriel.pdf">Produit Vectoriel</a>
+              <a href="pdf/Geometrie/Produit Vectoriel.pdf"
+                >Produit Vectoriel</a
+              >
             </li>
-              <li>
-              <a href="pdf/Geometrie/Position relative et intersection de deux droites.pdf">Position relative et intersection de deux droites</a>
+            <li>
+              <a
+                href="pdf/Geometrie/Position relative et intersection de deux droites.pdf"
+                >Position relative et intersection de deux droites</a
+              >
             </li>
             <!-- <li>
               <a href="pdf/Geometrie/Produit Vectorielle.pdf"
@@ -48,9 +55,13 @@
         </li>
         <li>
           <p><u>Nombres Complexes</u></p>
-          <li>
-            <a href="pdf/Nombres Complexes/Nombres Complexes.pdf">Nombres Complexes</a>
-          </li>
+          <ul>
+            <li>
+              <a href="pdf/Nombres Complexes/Nombres Complexes.pdf"
+                >Nombres Complexes</a
+              >
+            </li>
+          </ul>
         </li>
         <li>
           <p><u>Intégration</u></p>
