--- a/Divers/exotischeUmwandlungen.html
+++ b/Divers/exotischeUmwandlungen.html
@@ -27,6 +27,21 @@
         <table>
           <tr>
             <td colspan="3">
+              <p style="text-align: center"><b>Beschleunigung</b></p>
+            </td>
+          </tr>
+          <tr>
+            <th>Name</th>
+            <th>Einheit</th>
+            <th>S.I.-Beschreibung</th>
+          </tr>
+          <tr>
+            <td>$$Galileo$$</td>
+            <td>$$1 Gal$$</td>
+            <td>$$1 \cdot 10^{-2}\frac{m}{s^2}$$</td>
+          </tr>
+          <tr>
+            <td colspan="3">
               <p style="text-align: center"><b>Distanz</b></p>
             </td>
           </tr>
