--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -5,29 +5,18 @@
     <meta charset="utf-8" />
     <meta name="author" content="Niederkorn Damon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../assets/mathJax.js"></script>
+
+    <script
+      type="text/javascript"
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
     <script defer src="../feedbackPopup.js"></script>
-    <script async src="../chapterNavigator.js"></script>
+    <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
-    <link rel="stylesheet" href="../css/resetStyleSheet.css" />
-    <link
-      id="navStylesheet"
-      rel="stylesheet"
-      href="../css/settings/relativeNav.css"
-    />
-    <link
-      rel="stylesheet"
-      id="themeStylesheetLink"
-      href="../css/Themes/defaultTheme.css"
-    />
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/chapterStyle.css" />
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
 
     <title>Programmen</title>
   </head>
@@ -51,6 +40,11 @@
         </li>
         <li>
           <a href="converter.html" class="indexLink">Converter</a>
+        </li>
+        <li>
+          <a href="fonctionsDeDeuxiemeDegree.html" class="indexLink"
+            >Fonctions de deuxieme degree</a
+          >
         </li>
       </ol>
     </div>
