--- a/changeLog.html
+++ b/changeLog.html
@@ -114,6 +114,22 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <h3>Update 45</h3>
+            <time>.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Neit Programm: "generer des fonctions du seconde degree et ses
+                solutions"
+              </li>
+            </ul>
+            <h3>Update 44</h3>
+            <time>12.6.2023</time>
+            <ul>
+              <li class="changeLogText">Nei Einheiten am Converter</li>
+              <li class="changeLogText">
+                Nei Einheiten an Exotische Umwandlungen
+              </li>
+            </ul>
             <h3>Update 43</h3>
             <time>3.6.2023</time>
             <ul>
