--- a/Programmen/fonctionsDuDeuxiemeDegree.html
+++ b/Programmen/fonctionsDuDeuxiemeDegree.html
@@ -15,27 +15,50 @@
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
 
+    <link rel="stylesheet" href="progra.css" />
+
     <!-- Equation code -->
 
     <script defer src="equation.js"></script>
-    <link rel="stylesheet" href="equation.css" />
 
     <title>Equations du deuxieme degrée</title>
+    <style>
+      .inVisible {
+        display: none;
+      }
+      .hide {
+        opacity: 0;
+      }
+      @media print {
+        form {
+          display: none;
+        }
+        .remove {
+          display: none;
+        }
+        .settings {
+          display: none;
+        }
+        hr {
+          display: none;
+        }
+      }
+    </style>
   </head>
   <body>
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <p id="printWatermark"></p>
-      <h1>Fonctions de deuxieme degrée</h1>
-      <p>Erklärende Saatz</p>
-      <h2>Paramètres</h2>
+      <h1>Fonctions du deuxieme degrée</h1>
+      <p class="remove">Erklärende Saatz</p>
+      <h2 class="settings">Paramètres</h2>
       <form action="">
         <label for="coefficient">Coefficient maximale</label> <br />
         <input type="coefficient" id="coefficient" value="10" />
         <br />
         <br />
         <label for="number">Nombres des équations a générer</label> <br />
-        <input type="number" id="number" value="20" />
+        <input type="number" id="number" value="25" />
         <br />
         <br />
         <input type="checkbox" id="fractions" />
@@ -56,49 +79,33 @@
         <input
           type="button"
           value="Solutions"
-          id="generateButton"
+          id="solutionButton"
           onclick="displaySolution()"
         />
         <input
           type="button"
           value="Effacer"
-          id="generateButton"
+          id="refreshButton"
           onclick="reloadWindow()"
         />
         <br />
-        <input
-          type="radio"
-          id="enonceRadio"
-          name="displaySelection"
-          value="Énonce"
-        />
-        <label for="enonceRadio">Énonce</label>
+        <label for="displaySelector">Choisissez ce qui va être affiché:</label>
         <br />
-        <input
-          type="radio"
-          id="solutionsRadio"
-          name="displaySelection"
-          value="Solutions"
-        />
-        <label for="solutionsRadio">Solutions</label>
-        <br />
-        <input
-          type="radio"
-          id="enonceEtSolutionsRadio"
-          name="displaySelection"
-          value="Énonce et solutions"
-          checked
-        />
-        <label for="enonceEtSolutionsRadio">Énonce et solutions</label>
+        <select name="displaySelector" id="selecta">
+          <option value="tout" selected>Tout</option>
+          <option value="enonce">Énoncé</option>
+          <option value="solutions">Solutions</option>
+        </select>
       </form>
-      <hr />
-      <div id="test" class="enonce">
+      <p id="progress-label" class="inVisible">Chargement...</p>
+      <hr class="hr" />
+      <div class="" id="foo">
         <h2>Énoncé</h2>
         <div id="latexContainer"></div>
 
         <ol id="orderedList"></ol>
       </div>
-      <div class="solutions">
+      <div class="" id="bar">
         <h2>Solutions</h2>
         <ol id="solutionsList"></ol>
       </div>
