--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -41,11 +41,11 @@
         <li>
           <a href="converter.html" class="indexLink">Converter</a>
         </li>
-        <li>
-          <a href="fonctionsDeDeuxiemeDegree.html" class="indexLink"
-            >Fonctions de deuxieme degree</a
+        <!-- <li>
+          <a href="fonctionsDuDeuxiemeDegree.html" class="indexLink"
+            >Fonctions du deuxieme degree</a
           >
-        </li>
+        </li> -->
       </ol>
     </div>
   </body>
