--- a/changeLog.html
+++ b/changeLog.html
@@ -107,6 +107,9 @@
               <li>
                 <p>luxformel huet 100 Kapitelen erreecht - 17.4.2023</p>
               </li>
+              <li>
+                <p>Éischt Programm: Electronvolt - 6.7.2023</p>
+              </li>
             </ul>
           </blockquote>
           <hr />
@@ -115,11 +118,12 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 45</h3>
-            <time>.2023</time>
+            <time>6.7.2023</time>
             <ul>
+              <li class="changeLogText">Nei Kategorie: Downloads</li>
+              <li class="changeLogText">Neit Programm Electronvolt.</li>
               <li class="changeLogText">
-                Neit Programm: "generer des fonctions du seconde degree et ses
-                solutions"
+                Electronvolt Versiounen fir MacOS an Windows
               </li>
             </ul>
             <h3>Update 44</h3>
