--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <main>
             <a href="installeieren.html" class="frontPageBoxlinks">
               <div class="pwaLink boxlink">
-                <h3>Installéiert luxformel!</h3>
+                <h3>Installéiert Electronvolt!</h3>
               </div>
             </a>
 
@@ -200,6 +200,12 @@
             <a href="Divers/index.html" class="frontPageBoxlinks">
               <div class="boxlink">
                 <h3>Divers</h3>
+              </div>
+            </a>
+
+            <a href="Downloads/index.html" class="frontPageBoxlinks">
+              <div class="boxlink">
+                <h3>Download</h3>
               </div>
             </a>
 
