--- a/installeieren.html
+++ b/installeieren.html
@@ -9,98 +9,44 @@
     <script src="assets/insertRootHTML.js"></script>
     <title>Installéieren vu luxformel</title>
   </head>
+  <style>
+    .banner {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+    }
+    p {
+      max-width: 80ch;
+    }
+  </style>
   <body>
     <my-navigator></my-navigator>
     <div id="container">
       <div id="main">
         <div class="main-wrapper">
           <main>
-            <h1 class="header-install">Installéieren vu luxformel</h1>
-            <article class="borderInstall">
-              <h2>Wéi installéieren ech luxformel op engem Computer?</h2>
-              <div class="hello">
-                <p>
-                  Luxformel ze installéieren ass ganz einfach! Dréckt einfach
-                  uewen op den Download-Knäppchen de bei ierch am Browser misst
-                  ugewise ginn. Ënnem am Bild ass gewisen wou sech de Knäppche
-                  verstoppt an engem Chrome Browser op engem Mac, mä all OS oder
-                  Computer misst mat der Method kompatibel sinn.
-                </p>
-                <img
-                  src="PWA/pwaTutorial/tutorialStep1.png"
-                  alt=""
-                  class="tutorial"
-                />
-                <img
-                  src="PWA/pwaTutorial/tutorialStep1Zoom.png"
-                  alt=""
-                  class="tutorial"
-                />
-                <p>
-                  Wann der op den Download-Knäppchen gedréckt hutt misst eng
-                  Dialog-Box opdauchen, déi ierch virschléit luxformel ze
-                  installéieren. Dréckt op <q>Install</q>.
-                </p>
-                <img
-                  src="PWA/pwaTutorial/tutorialStep2.png"
-                  alt=""
-                  class="tutorial"
-                />
-                <p>
-                  D'luxformel PWA misst elo gedownload sinn. Dir kennt elo
-                  luxformel ouni Browser benotzen.
-                </p>
-                <img
-                  src="PWA/pwaTutorial/tutorialStep3.png"
-                  alt=""
-                  class="tutorial"
-                />
-              </div>
-            </article>
-
-            <article class="borderInstall">
-              <h2>
-                Wéi installéieren ech luxformel op engem Handy oder Tablett?
-              </h2>
-              <div class="hello">
-                <p>
-                  Luxformel ze installéieren ass ganz einfach! Dréckt einfach
-                  ënnen op den Share-Knäppchen de bei ierch am Browser misst
-                  ugewise ginn. Ënnem am Bild ass gewisen wou sech de Knäppche
-                  verstoppt am Safari Browser op engem iPhone, mä all OS oder
-                  Handy, Tablett misst mat der Method kompatibel sinn.
-                </p>
-                <img
-                  src="PWA/pwaTutorial/phoneTutorial1.png"
-                  alt=""
-                  class="tutorial"
-                />
-                <p>
-                  Wann der op den Share-Knäppchen gedréckt hutt misst de
-                  Share-Dialog opdauchen. Hei dréckt der
-                  <q>Add to Home Screen</q> oder änlech genannte Funktiounen.
-                </p>
-                <img
-                  src="PWA/pwaTutorial/phoneTutorial2.png"
-                  alt=""
-                  class="tutorial"
-                />
-                <p>
-                  Dir kennt elo an engem zweete Schrëtt nach auswielen wéi dass
-                  der déi usech <q>Bookmark</q> nenne wëllt. Dréckt dann wéi hei
-                  <q>Add</q>.
-                </p>
-                <img
-                  src="PWA/pwaTutorial/phoneTutorial3.png"
-                  alt=""
-                  class="tutorial"
-                />
-                <p>
-                  D'luxformel PWA misst elo gedownload sinn. Dir kennt elo
-                  luxformel ouni Browser benotzen.
-                </p>
-              </div>
-            </article>
+            <img
+              class="banner"
+              src="img/electronvolt_bannerCrop.png"
+              alt="electronvolt_banner"
+            />
+            <h1 class="header-install">Installéieren vu Electronvolt</h1>
+            <p>
+              Electronvolt ass ee Programm den et Ierch erlaabt fir Schaltungen
+              op ein einfach Art a Weis ze zeechnen.
+            </p>
+            <p>
+              Electronvolt ass ganz einfach fir ze installéieren gidd einfach op
+              <a href="Downloads/index.html">Downloads</a> an wielt Är Platform,
+              siew et Windows oder MacOS aus, an lued Ierch Electronvolt erof.
+            </p>
+            <p>
+              Wann dir Feedback hudd fir Electronvolt ze verbesseren oder Dir
+              fannt Feeler am Programm da schéckt eng Noricht op:
+              <a href="mailto:feedback@luxformel.info"
+                >feedback@luxformel.info</a
+              >
+            </p>
           </main>
         </div>
       </div>
