--- a/changeLog.html
+++ b/changeLog.html
@@ -117,6 +117,11 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <h3>Update 46</h3>
+            <time>9.2023</time>
+            <ul>
+              <li class="changeLogText">TEST</li>
+            </ul>
             <h3>Update 45</h3>
             <time>6.7.2023</time>
             <ul>
