--- a/Mathe/index.html
+++ b/Mathe/index.html
@@ -114,6 +114,11 @@
         <li>
           <a href="integration.html" class="indexLink"> Intégration </a>
         </li>
+        <li>
+          <a href="logiqueElementaire.html" class="indexLink">
+            Logique Élémentaire
+          </a>
+        </li>
       </ol>
       <!-- <h3>Bemierkung</h3>
       <p>
