--- a/changeLog.html
+++ b/changeLog.html
@@ -120,7 +120,9 @@
             <h3>Update 46</h3>
             <time>9.2023</time>
             <ul>
-              <li class="changeLogText">TEST</li>
+              <li class="changeLogText">
+                Neit Kapitel an der Mathé: Logique Élémentaire
+              </li>
             </ul>
             <h3>Update 45</h3>
             <time>6.7.2023</time>
